staff.html 人员管理管理

--- a/src/main/webapp/WEB-INF/view/salary/staff/staff.html
+++ b/src/main/webapp/WEB-INF/view/salary/staff/staff.html
@@ -2,7 +2,7 @@
 <div class="layui-fluid weadmin-body">
     <form class="layui-form" action="">
         <div class="layui-elem-quote">
-            <label>人员管理管理</label>
+            <label>人员管理</label>
         </div>
         <br />
         <div class="layui-form-item clearfix">
