--- a/src/main/webapp/WEB-INF/view/salary/MoveLog/moveLog.html
+++ b/src/main/webapp/WEB-INF/view/salary/MoveLog/moveLog.html
@@ -2,12 +2,12 @@
 <div class="layui-fluid weadmin-body">
     <form class="layui-form" action="">
         <div class="layui-elem-quote">
-            <label>调动日志</label>
+            <label>调动日志管理</label>
         </div>
         <br />
         <div class="layui-form-item clearfix">
             <div class="layui-input-inline">
-                <input type="text" id="condition" placeholder="请输入名称" autocomplete="off" class="layui-input" >
+                <input type="text" id="moveID" placeholder="请输入员工ID" autocomplete="off" class="layui-input" >
             </div>
             <div class="layui-input-inline">
                 <button class="layui-btn" data-type="reload" type="button" onclick="MoveLog.search()"><i class="layui-icon">&#xe615;</i>查询</button>
@@ -16,7 +16,10 @@
             <div class="fr">
                 <button type="button" class="layui-btn" id="add"
                 onclick="MoveLog.openAddMoveLog()"><i class="layui-icon">&#xe654;</i>新增</button>
-
+                <button type="button" class="layui-btn" id="edit"
+                onclick="MoveLog.openMoveLogDetail()"><i class="layui-icon">&#xe642;</i>修改</button>
+                <button type="button" class="layui-btn" id="del"
+                onclick="MoveLog.delete()"><i class="layui-icon">&#xe640;</i>删除</button>
             </div>
         </div>
     </form>
