--- a/src/main/webapp/WEB-INF/view/salary/PermissionManagement/blackList/blackList.html
+++ b/src/main/webapp/WEB-INF/view/salary/PermissionManagement/blackList/blackList.html
@@ -2,7 +2,7 @@
 <div class="layui-fluid weadmin-body">
     <form class="layui-form" action="">
         <div class="layui-elem-quote">
-            <label>薪资权限管理---黑名单维护管理</label>
+            <label>黑名单维护</label>
         </div>
         <br />
         <div class="layui-form-item clearfix">
