--- a/src/main/webapp/WEB-INF/view/salary/staff/staff.html
+++ b/src/main/webapp/WEB-INF/view/salary/staff/staff.html
@@ -15,11 +15,11 @@
             </div>
             <div class="fr">
                 <button type="button" class="layui-btn" id="add"
-                onclick="Staff.openAddStaff()"><i class="layui-icon">&#xe654;</i>新增</button>
+                onclick="Staff.openAddStaff()"><i class="layui-icon">&#xe654;</i>入职</button>
                 <button type="button" class="layui-btn" id="edit"
                 onclick="Staff.openStaffDetail()"><i class="layui-icon">&#xe642;</i>修改</button>
                 <button type="button" class="layui-btn" id="del"
-                onclick="Staff.delete()"><i class="layui-icon">&#xe640;</i>删除</button>
+                onclick="Staff.delete()"><i class="layui-icon">&#xe640;</i>离职</button>
             </div>
         </div>
     </form>
