--- a/src/main/webapp/WEB-INF/view/salary/staff/staff_add.html
+++ b/src/main/webapp/WEB-INF/view/salary/staff/staff_add.html
@@ -1,12 +1,12 @@
 @layout("/common/layout.html",{title:'添加'}){
 <div class="weadmin-body-1 layui-form" style="padding-bottom:50px;">
-            <div class="layui-form-item">
-                    <label class="layui-form-label">员工id：</label>
-                    <div class="layui-input-inline">
-                        <input id="staffId" name="staffId" class="layui-input"
-                               placeholder="请输入员工id">
-                    </div>
-                </div>
+<!--            <div class="layui-form-item">-->
+<!--                    <label class="layui-form-label">员工id：</label>-->
+<!--                    <div class="layui-input-inline">-->
+<!--                        <input id="staffId" name="staffId" class="layui-input"-->
+<!--                               placeholder="请输入员工id">-->
+<!--                    </div>-->
+<!--                </div>-->
             <div class="layui-form-item">
                     <label class="layui-form-label">姓名：</label>
                     <div class="layui-input-inline">
@@ -17,38 +17,32 @@
             <div class="layui-form-item">
                     <label class="layui-form-label">性别：</label>
                     <div class="layui-input-inline">
-                        <input id="gender" name="gender" class="layui-input"
-                               placeholder="请输入性别">
+<!--                        <input id="gender" name="gender" class="layui-input"-->
+<!--                               placeholder="请输入性别">-->
+                        <select id="gender" name="gender">
+                            <option value="1" selected>男</option>
+                            <option value="0">女</option>
+                        </select>
                     </div>
                 </div>
             <div class="layui-form-item">
-                    <label class="layui-form-label">部门ID：</label>
+                    <label class="layui-form-label">部门</label>
                     <div class="layui-input-inline">
-                        <input id="departmentId" name="departmentId" class="layui-input"
-                               placeholder="请输入部门ID">
+<!--                        <input id="departmentId" name="departmentId" class="layui-input"-->
+<!--                               placeholder="请输入部门ID">-->
+                        <select id="departmentId" name="departmentId"></select>
                     </div>
+
                 </div>
             <div class="layui-form-item">
-                    <label class="layui-form-label">职位ID：</label>
+                    <label class="layui-form-label">职位：</label>
                     <div class="layui-input-inline">
-                        <input id="positionId" name="positionId" class="layui-input"
-                               placeholder="请输入职位ID">
+<!--                        <input id="positionId" name="positionId" class="layui-input"-->
+<!--                               placeholder="请输入职位ID">-->
+                        <select id="positionId" name="positionId"></select>
                     </div>
                 </div>
-            <div class="layui-form-item">
-                    <label class="layui-form-label">入职时间：</label>
-                    <div class="layui-input-inline">
-                        <input id="entryTime" name="entryTime" class="layui-input dateType"
-                               placeholder="请输入入职时间" readonly>
-                    </div>
-                </div>
-            <div class="layui-form-item">
-                    <label class="layui-form-label">离职时间：</label>
-                    <div class="layui-input-inline">
-                        <input id="departureTime" name="departureTime" class="layui-input dateType"
-                               placeholder="请输入离职时间" readonly>
-                    </div>
-                </div>
+
     <div class="layerBtnCenter btn-box btn-box-1">
         <button type="button" name="取消" class="layui-btn btn-close" id="cancel"
         onclick="StaffInfoDlg.close()"><i class="iconfont">&#x1006;</i>取消</button>
