--- a/src/main/webapp/WEB-INF/view/salary/move/moveLog.html
+++ b/src/main/webapp/WEB-INF/view/salary/move/moveLog.html
@@ -7,15 +7,14 @@
         <br />
         <div class="layui-form-item clearfix">
             <div class="layui-input-inline">
-                <input type="text" id="condition" placeholder="请输入名称" autocomplete="off" class="layui-input" >
+                <input type="text" id="moveName" placeholder="请输入调动员工姓名" autocomplete="off" class="layui-input" >
             </div>
             <div class="layui-input-inline">
                 <button class="layui-btn" data-type="reload" type="button" onclick="MoveLog.search()"><i class="layui-icon">&#xe615;</i>查询</button>
                 <button class="layui-btn" type="reset"><i class="layui-icon">&#xe00A;</i>重置</button>
             </div>
             <div class="fr">
-                <button type="button" class="layui-btn" id="add"
-                onclick="MoveLog.openAddMoveLog()"><i class="layui-icon">&#xe654;</i>新增</button>
+
             </div>
         </div>
     </form>
