--- a/src/main/webapp/WEB-INF/view/salary/staff/staff_add.html
+++ b/src/main/webapp/WEB-INF/view/salary/staff/staff_add.html
@@ -4,7 +4,7 @@
                     <label class="layui-form-label">姓名：</label>
                     <div class="layui-input-inline">
                         <input id="staffName" name="staffName" class="layui-input"
-                               placeholder="请输入姓名">
+                               placeholder="请输入姓名" lay-verify="username">
                     </div>
                 </div>
             <div class="layui-form-item">
@@ -32,9 +32,9 @@
 
     <div class="layerBtnCenter btn-box btn-box-1">
         <button type="button" name="取消" class="layui-btn btn-close" id="cancel"
-        onclick="StaffInfoDlg.close()"><i class="iconfont">&#x1006;</i>取消</button>
+                onclick="StaffInfoDlg.close()"><i class="iconfont">&#x1006;</i>取消</button>
         <button type="button" name="提交" class="layui-btn btn-save" id="ensure"
-        onclick="StaffInfoDlg.addSubmit()"><i class="iconfont">&#xe009;</i>保存</button>
+        lay-submit lay-filter="staffAddSubmit"><i class="iconfont">&#xe009;</i>保存</button>
     </div>
 </div>
 <script src="${ctxPath}/static/salary/staff/staff_info.js"></script>
