--- a/src/main/webapp/WEB-INF/view/salary/PermissionManagement/whiteList/whiteList_edit.html
+++ b/src/main/webapp/WEB-INF/view/salary/PermissionManagement/whiteList/whiteList_edit.html
@@ -1,32 +1,57 @@
 @layout("/common/layout.html",{title:'详情'}){
-<div class="weadmin-body-1 layui-form" style="padding-bottom:50px;">
-            <div class="layui-form-item">
-                    <label class="layui-form-label">员工ID：</label>
-                    <div class="layui-input-inline">
-                        <input id="staffId" name="staffId" class="layui-input"
-                               placeholder="请输入员工ID" value="${item.staffId}">
-                    </div>
-             </div>
-            <div class="layui-form-item">
-                    <label class="layui-form-label">部门ID：</label>
-                    <div class="layui-input-inline">
-                        <input id="departmentId" name="departmentId" class="layui-input"
-                               placeholder="请输入部门ID" value="${item.departmentId}">
-                    </div>
-             </div>
-            <div class="layui-form-item">
-                    <label class="layui-form-label">权限ID：</label>
-                    <div class="layui-input-inline">
-                        <input id="permissionId" name="permissionId" class="layui-input"
-                               placeholder="请输入权限ID" value="${item.permissionId}">
-                    </div>
-             </div>
-    <div class="layerBtnCenter btn-box btn-box-1">
-        <button type="button" name="取消" class="layui-btn btn-close" id="cancel"
-        onclick="WhiteListInfoDlg.close()"><i class="iconfont">&#x1006;</i>取消</button>
-        <button type="button" name="提交" class="layui-btn btn-save" id="ensure"
-        onclick="WhiteListInfoDlg.editSubmit()"><i class="iconfont">&#xe009;</i>保存</button>
-    </div>
+<div class="weadmin-body-1" style="padding-bottom:50px;">
+    <form class="layui-form">
+        <div class="layui-form-item">
+            <label class="layui-form-label">员工工号:</label>
+            <div class="layui-input-inline">
+                <input id="staffId" name="staffId" class="layui-input"
+                       placeholder="请输入员工ID" value="${item.staffId}" disabled>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">员工姓名:</label>
+            <div class="layui-input-inline">
+                <input id="staffName" name="staffName" class="layui-input"
+                       placeholder="请输入员工姓名" value="${item.staffName}" disabled>
+            </div>
+        </div>
+
+        <!--部门ID部分是隐藏的-->
+        <div class="layui-form-item" style="display: none !important;">
+            <label class="layui-form-label">选择的部门ID：</label>
+            <div class="layui-input-inline">
+                <input id="departmentId" name="departmentId" class="layui-input"
+                       placeholder="请输入部门ID" value="${item.departmentId}">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">设置部门:</label>
+            <div class="layui-input-inline">
+                <select id="departmentName" name="departmentName" lay-search=""></select>
+            </div>
+        </div>
+
+        <!--权限ID是隐藏的-->
+        <div class="layui-form-item" style="display: none !important;">
+            <label class="layui-form-label">选择的权限ID：</label>
+            <div class="layui-input-inline">
+                <input id="permissionId" name="permissionId" class="layui-input"
+                       placeholder="请输入权限ID" value="${item.permissionId}">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">设置权限:</label>
+            <div class="layui-input-inline">
+                <select id="permissionName" name="permissionName" lay-search=""></select>
+            </div>
+        </div>
+        <div class="layerBtnCenter btn-box btn-box-1">
+            <button type="button" name="取消" class="layui-btn btn-close" id="cancel"
+                    onclick="WhiteListInfoDlg.close()"><i class="iconfont">&#x1006;</i>取消</button>
+            <button type="button" name="提交" class="layui-btn btn-save" id="ensure"
+                    onclick="WhiteListInfoDlg.editSubmit()"><i class="iconfont">&#xe009;</i>保存</button>
+        </div>
+    </form>
 </div>
 <script src="${ctxPath}/static/salary/PermissionManagement/whiteList/whiteList_info.js"></script>
 @}
