--- a/src/main/webapp/WEB-INF/view/salary/staff/staff.html
+++ b/src/main/webapp/WEB-INF/view/salary/staff/staff.html
@@ -26,35 +26,20 @@
 
     <div style="width: 100%">
         <div class="layui-form" lay-filter="searchBar">
-            <div class="layui-form-item clearfix">
-                <div class="layui-input-inline">
-                    <select id="staffName" lay-verify="required" lay-search=""></select>
-                </div>
-            </div>
-            <div class="layui-form-item clearfix">
-                <div class="layui-input-inline">
+            <div class="layui-form-item layui-row layui-col-space1">
+                <div>
                     <select id="gender" lay-verify="required" lay-search=""></select>
                 </div>
-            </div>
-            <div class="layui-form-item clearfix">
-            </div>
-            <div class="layui-form-item clearfix">
-                <div class="layui-input-inline">
+                <div>
                     <select id="department" lay-verify="required" lay-search=""></select>
                 </div>
-            </div>
-            <div class="layui-form-item clearfix">
-                <div class="layui-input-inline">
+                <div>
                     <select id="position" lay-verify="required" lay-search=""></select>
                 </div>
-            </div>
-            <div class="layui-form-item clearfix">
-                <div class="layui-input-inline">
+                <div>
                     <select id="entryTime" lay-verify="required" lay-search=""></select>
                 </div>
-            </div>
-            <div class="layui-form-item clearfix">
-                <div class="layui-input-inline">
+                <div>
                     <select id="departureTime" lay-verify="required" lay-search=""></select>
                 </div>
             </div>
