--- a/src/main/webapp/WEB-INF/view/salary/PermissionManagement/blackList/blackList_add.html
+++ b/src/main/webapp/WEB-INF/view/salary/PermissionManagement/blackList/blackList_add.html
@@ -1,33 +1,45 @@
 @layout("/common/layout.html",{title:'添加'}){
 <div class="weadmin-body-1 layui-form" style="padding-bottom:50px;">
-            <div class="layui-form-item">
-                    <label class="layui-form-label">员工ID：</label>
-                    <div class="layui-input-inline">
-                        <input id="staffId" name="staffId" class="layui-input"
-                               placeholder="请输入员工ID">
-                    </div>
-                </div>
-            <div class="layui-form-item">
-                    <label class="layui-form-label">部门ID：</label>
-                    <div class="layui-input-inline">
-                        <input id="departmentId" name="departmentId" class="layui-input"
-                               placeholder="请输入部门ID">
-                    </div>
-                </div>
-            <div class="layui-form-item">
-                    <label class="layui-form-label">权限ID：</label>
-                    <div class="layui-input-inline">
-                        <input id="permissionId" name="permissionId" class="layui-input"
-                               placeholder="请输入权限ID">
-                    </div>
-                </div>
-    <div class="layerBtnCenter btn-box btn-box-1">
-        <button type="button" name="取消" class="layui-btn btn-close" id="cancel"
-        onclick="BlackListInfoDlg.close()"><i class="iconfont">&#x1006;</i>取消</button>
-        <button type="button" name="提交" class="layui-btn btn-save" id="ensure"
-        onclick="BlackListInfoDlg.addSubmit()"><i class="iconfont">&#xe009;</i>保存</button>
-    </div>
+    <form class="layui-form">
+        <div class="layui-form-item">
+            <label class="layui-form-label">员工工号:</label>
+            <div class="layui-input-inline">
+                <select id="staffId" name="staffId" lay-filter="staffId" lay-search=""></select>
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">员工姓名:</label>
+            <div class="layui-input-inline">
+                <select id="staffName" name="staffName" lay-filter="staffName" lay-search=""></select>
+            </div>
+        </div>
+
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">设置部门:</label>
+            <div class="layui-input-inline">
+                <select id="departmentName" name="departmentName" lay-filter="dp" lay-search=""></select>
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">设置权限:</label>
+            <div class="layui-input-inline">
+                <select id="permissionName" name="permissionName" lay-filter="dp" lay-search=""></select>
+            </div>
+        </div>
+
+        <div class="layerBtnCenter btn-box btn-box-1">
+            <button type="button" name="重置" class="layui-btn btn-close" id="reset"
+                    onclick="BlackListInfoDlg.reset()"><i class="iconfont">&#x1006;</i>重置</button>
+            <button type="button" name="取消" class="layui-btn btn-close" id="cancel"
+                    onclick="BlackListInfoDlg.close()"><i class="iconfont">&#x1006;</i>取消</button>
+            <button type="button" name="提交" class="layui-btn btn-save" id="ensure"
+                    onclick="BlackListInfoDlg.addSubmit()"><i class="iconfont">&#xe009;</i>保存</button>
+        </div>
+    </form>
 </div>
-<script src="${ctxPath}/static/salary/PermissionManagement/blackList/blackList_info.js"></script>
+<script src="${ctxPath}/static/salary/PermissionManagement/blackList/blackList_add.js"></script>
 @}
 
