--- a/src/main/webapp/WEB-INF/view/salary/staff/staff_edit.html
+++ b/src/main/webapp/WEB-INF/view/salary/staff/staff_edit.html
@@ -49,5 +49,9 @@
                 lay-submit lay-filter="staffEditSubmit"><i class="iconfont">&#xe009;</i>保存</button>
     </div>
 </div>
+<script>
+    var departmentId_value = "${item.department.departmentId}";
+    var positionId_value = "${item.position.positionId}";
+</script>
 <script src="${ctxPath}/static/salary/staff/staff_info.js"></script>
 @}
