--- a/src/main/webapp/WEB-INF/view/salary/staff/staff.html
+++ b/src/main/webapp/WEB-INF/view/salary/staff/staff.html
@@ -19,7 +19,7 @@
                 <button type="button" class="layui-btn" id="edit"
                 onclick="Staff.openStaffDetail()"><i class="layui-icon">&#xe642;</i>修改</button>
                 <button type="button" class="layui-btn" id="del"
-                onclick="Staff.delete(${operator.staffId})"><i class="layui-icon">&#xe640;</i>离职</button>
+                onclick="Staff.delete()"><i class="layui-icon">&#xe640;</i>离职</button>
             </div>
         </div>
     </form>
