权限管理0620  23:00 by王明凯 新增操作前的权限控制

--- a/src/main/webapp/WEB-INF/view/salary/PermissionManagement/blackList/blackList.html
+++ b/src/main/webapp/WEB-INF/view/salary/PermissionManagement/blackList/blackList.html
@@ -25,28 +25,28 @@
         </div>
     </form>
 
-    <div style="width: 100%">
-    <form class="layui-form" style="width: 100% !important;">
-        <div class="layui-inline" style="width:92% !important;margin-left: 8% !important;display: flex !important;">
-            <!--<label class="layui-form-label">搜索选择框</label>-->
-            <div class="layui-input-inline" style="width: 25% !important;">
-                <select id="staffId" lay-verify="required" lay-search=""></select>
-            </div>
+    <div id="select-group" style="width: 100%">
+        <form class="layui-form" style="width: 100% !important;">
+            <div class="layui-inline" style="width:92% !important;margin-left: 8% !important;display: flex !important;">
+                <!--<label class="layui-form-label">搜索选择框</label>-->
+                <div class="layui-input-inline" style="width: 25% !important;">
+                    <select id="staffId" lay-verify="required" lay-search=""></select>
+                </div>
 
-            <div class="layui-input-inline" style="width: 25% !important;">
-                <select id="staffName" lay-verify="required" lay-search=""></select>
-            </div>
+                <div class="layui-input-inline" style="width: 25% !important;">
+                    <select id="staffName" lay-verify="required" lay-search=""></select>
+                </div>
 
-            <div class="layui-input-inline" style="width: 25% !important;">
-                <select id="departmentName" lay-verify="required" lay-search=""></select>
-            </div>
+                <div class="layui-input-inline" style="width: 25% !important;">
+                    <select id="departmentName" lay-verify="required" lay-search=""></select>
+                </div>
 
-            <div class="layui-input-inline" style="width: 25% !important;">
-                <select id="permissionName" lay-verify="required" lay-search=""></select>
+                <div class="layui-input-inline" style="width: 25% !important;">
+                    <select id="permissionName" lay-verify="required" lay-search=""></select>
+                </div>
             </div>
-        </div>
-    </form>
-</div>
+        </form>
+    </div>
 
     <table id="BlackListTable" ></table>
 </div>
