--- a/src/main/webapp/WEB-INF/view/salary/PermissionManagement/whiteList/whiteList.html
+++ b/src/main/webapp/WEB-INF/view/salary/PermissionManagement/whiteList/whiteList.html
@@ -25,7 +25,7 @@
         </div>
     </form>
 
-    <div style="width: 100%">
+    <div id="select-group" style="width: 100%">
         <form class="layui-form" style="width: 100% !important;">
             <div class="layui-inline" style="width:92% !important;margin-left: 8% !important;display: flex !important;">
                 <!--<label class="layui-form-label">搜索选择框</label>-->
