621入职离职下拉列表框筛选

--- a/src/main/webapp/WEB-INF/view/salary/departure/departureLog.html
+++ b/src/main/webapp/WEB-INF/view/salary/departure/departureLog.html
@@ -5,18 +5,32 @@
             <label>离职日志</label>
         </div>
         <br />
-        <div class="layui-form-item clearfix">
+        <div class="layui-form-item clearfix" style="width: 150%">
+
             <div class="layui-input-inline">
-                <input type="text" id="condition" placeholder="请输入离职人员姓名" autocomplete="off" class="layui-input" >
+                <input type="text" id="condition1" placeholder="请输入操作ID" autocomplete="off" class="layui-input" >
             </div>
             <div class="layui-input-inline">
+                <input type="text" id="condition2" placeholder="请输入操作员ID或姓名" autocomplete="off" class="layui-input" >
+            </div>
+            <div class="layui-input-inline">
+                <input type="text" id="condition3" placeholder="请输入离职员工ID或姓名" autocomplete="off" class="layui-input" >
+            </div>
+            <div class="layui-form" lay-filter="searchBar">
+                <div class="layui-input-inline" style="width: 250px" lay-filter="searchBar">
+                    <select  id="operationTime" lay-verify="required" lay-search="" >
+                    </select>
+                </div>
+            </div>
+            <div class="layui-input-inline" >
                 <button class="layui-btn" data-type="reload" type="button" onclick="DepartureLog.search()"><i class="layui-icon">&#xe615;</i>查询</button>
                 <button class="layui-btn" type="reset"><i class="layui-icon">&#xe00A;</i>重置</button>
             </div>
-            <div class="fr">
-            </div>
+
         </div>
+
     </form>
+
     <table id="DepartureLogTable" ></table>
 </div>
 <script src="${ctxPath}/static/salary/departure/departureLog.js"></script>
