权限管理0621 10:25 by王明凯 隐藏了staffId和staffName的下拉选择框

--- a/src/main/webapp/WEB-INF/view/salary/PermissionManagement/whiteList/whiteList.html
+++ b/src/main/webapp/WEB-INF/view/salary/PermissionManagement/whiteList/whiteList.html
@@ -29,11 +29,11 @@
         <form class="layui-form" style="width: 100% !important;">
             <div class="layui-inline" style="width:92% !important;margin-left: 8% !important;display: flex !important;">
                 <!--<label class="layui-form-label">搜索选择框</label>-->
-                <div class="layui-input-inline" style="width: 25% !important;">
+                <div class="layui-input-inline" style="width: 25% !important; visibility: hidden">
                     <select id="staffId" lay-verify="" lay-search=""></select>
                 </div>
 
-                <div class="layui-input-inline" style="width: 25% !important;">
+                <div class="layui-input-inline" style="width: 25% !important; visibility: hidden">
                     <select id="staffName" lay-verify="" lay-search=""></select>
                 </div>
 
