--- a/src/main/webapp/WEB-INF/view/salary/entry/entryLog.html
+++ b/src/main/webapp/WEB-INF/view/salary/entry/entryLog.html
@@ -29,8 +29,8 @@
                     <select  id="position" lay-verify="required" lay-search="" lay-filter="searchBar">
                     </select>
                 </div>
-                <div class="layui-input-inline" style="width: 12%" lay-filter="searchBar">
-                    <select  id="operationTime" lay-verify="required" lay-search="" >
+                <div class="layui-input-inline" style="width: 12%">
+                    <select  id="operationTime" lay-verify="required" lay-search="" lay-filter="searchBar">
                     </select>
                 </div>
             </div>
