623 精确到月&前端统一界面&去掉了职位筛选

--- a/src/main/webapp/WEB-INF/view/salary/move/moveLog.html
+++ b/src/main/webapp/WEB-INF/view/salary/move/moveLog.html
@@ -20,25 +20,27 @@
                 <button class="layui-btn" type="reset"><i class="layui-icon">&#xe00A;</i>重置</button>
             </div>
             <div class="layui-form" lay-filter="search">
-                <div class="layui-input-inline" style="width: 9%">
-                    <select  id="oldD" lay-verify="required" lay-search="" lay-filter="searchBar">
-                    </select>
-                </div>
-                <div class="layui-input-inline" style="width: 9%">
-                    <select  id="oldP" lay-verify="required" lay-search="" lay-filter="searchBar">
-                    </select>
-                </div>
-                <div class="layui-input-inline" style="width: 9%">
-                    <select  id="newD" lay-verify="required" lay-search="" lay-filter="searchBar">
-                    </select>
-                </div>
-                <div class="layui-input-inline" style="width: 9%">
-                    <select  id="newP" lay-verify="required" lay-search="" lay-filter="searchBar">
-                    </select>
-                </div>
-                <div class="layui-input-inline" style="width: 10%">
-                    <select  id="operationTime" lay-verify="required" lay-search="" lay-filter="searchBar">
-                    </select>
+                <div class="fr" style="display: flex">
+                    <div class="layui-input-inline" style="width: 140px">
+                        <select  id="oldD" lay-verify="required" lay-search="" lay-filter="searchBar">
+                        </select>
+                    </div>
+                    <!--<div class="layui-input-inline" style="width: 9%">
+                        <select  id="oldP" lay-verify="required" lay-search="" lay-filter="searchBar">
+                        </select>
+                    </div>-->
+                    <div class="layui-input-inline" style="width: 140px">
+                        <select  id="newD" lay-verify="required" lay-search="" lay-filter="searchBar">
+                        </select>
+                    </div>
+                    <!--<div class="layui-input-inline" style="width: 9%">
+                        <select  id="newP" lay-verify="required" lay-search="" lay-filter="searchBar">
+                        </select>
+                    </div>-->
+                    <div class="layui-input-inline" style="width: 170px">
+                        <select  id="operationTime" lay-verify="required" lay-search="" lay-filter="searchBar">
+                        </select>
+                    </div>
                 </div>
             </div>
 
