--- a/src/main/webapp/WEB-INF/view/salary/departure/departureLog.html
+++ b/src/main/webapp/WEB-INF/view/salary/departure/departureLog.html
@@ -21,17 +21,19 @@
                 <button class="layui-btn" type="reset"><i class="layui-icon">&#xe00A;</i>重置</button>
             </div>
             <div class="layui-form" lay-filter="search">
-                <div class="layui-input-inline" style="width: 10%">
+                <div class="fr" style="display: flex">
+                <div class="layui-input-inline" style="width: 140px">
                     <select  id="department" lay-verify="required" lay-search="" lay-filter="searchBar">
                     </select>
                 </div>
-                <div class="layui-input-inline" style="width: 10%">
+                <!--<div class="layui-input-inline" style="width: 10%">
                     <select  id="position" lay-verify="required" lay-search="" lay-filter="searchBar">
                     </select>
-                </div>
-                <div class="layui-input-inline" style="width: 12%">
+                </div>-->
+                <div class="layui-input-inline" style="width: 170px">
                     <select  id="operationTime" lay-verify="required" lay-search="" lay-filter="searchBar">
                     </select>
+                </div>
                 </div>
             </div>
 
