--- a/src/main/webapp/WEB-INF/view/salary/staff/staff.html
+++ b/src/main/webapp/WEB-INF/view/salary/staff/staff.html
@@ -2,12 +2,21 @@
 <div class="layui-fluid weadmin-body">
     <form class="layui-form" action="" lay-filter="toolbar">
         <div class="layui-elem-quote">
-            <label>人员管理</label>
+            <label>员工管理</label>
         </div>
         <br />
         <div class="layui-form-item clearfix">
-            <div class="layui-input-inline">
-                <input type="text" id="condition" placeholder="请输入员工ID或员工姓名" autocomplete="off" class="layui-input" >
+            <div class="layui-input-inline" style="width: 120px;">
+                <input type="text" id="condition" placeholder="工号/姓名" autocomplete="off" class="layui-input" >
+            </div>
+            <div class="layui-input-inline" style="width: 70px;">
+                <select id="gender" lay-verify="required" lay-search=""></select>
+            </div>
+            <div class="layui-input-inline" style="width: 120px;">
+                <select id="department" lay-verify="required" lay-search=""></select>
+            </div>
+            <div class="layui-input-inline" style="width: 70px;">
+                <select id="position" lay-verify="required" lay-search=""></select>
             </div>
             <div class="layui-input-inline">
                 <button class="layui-btn" data-type="reload" type="button" onclick="Staff.search()"><i class="layui-icon">&#xe615;</i>查询</button>
@@ -15,35 +24,25 @@
             </div>
             <div class="fr">
                 <button type="button" class="layui-btn" id="add"
-                onclick="Staff.openAddStaff()"><i class="layui-icon">&#xe654;</i>入职</button>
+                        onclick="Staff.openAddStaff()"><i class="layui-icon">&#xe654;</i>入职</button>
                 <button type="button" class="layui-btn" id="edit"
-                onclick="Staff.openStaffDetail()"><i class="layui-icon">&#xe642;</i>修改</button>
+                        onclick="Staff.openStaffDetail()"><i class="layui-icon">&#xe642;</i>修改</button>
                 <button type="button" class="layui-btn" id="del"
-                onclick="Staff.delete()"><i class="layui-icon">&#xe640;</i>离职</button>
+                        onclick="Staff.delete()"><i class="layui-icon">&#xe640;</i>离职</button>
             </div>
         </div>
     </form>
 
-    <div style="width: 100%">
+    <div>
         <div class="layui-form" lay-filter="searchBar">
-            <div class="layui-form-item layui-row layui-col-space1">
-                <div>
-                    <select id="gender" lay-verify="required" lay-search=""></select>
+            <div class="fr" style="display: flex">
+                <div class="layui-input-inline" style="width: 147px;">
+                    <select id="entryTime" lay-verify="required" lay-search="" class=""></select>
                 </div>
-                <div>
-                    <select id="department" lay-verify="required" lay-search=""></select>
-                </div>
-                <div>
-                    <select id="position" lay-verify="required" lay-search=""></select>
-                </div>
-                <div>
-                    <select id="entryTime" lay-verify="required" lay-search=""></select>
-                </div>
-                <div>
+                <div class="layui-input-inline" style="width: 161px;">
                     <select id="departureTime" lay-verify="required" lay-search=""></select>
                 </div>
             </div>
-
         </div>
     </div>
 
